--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.blue{
+    color: rgb(0, 0, 200);
+}
+
+.v-middle {
+    vertical-align: middle;
+}
+
+.msg-success{
+    background-color: rgb(0, 0, 200);
+    color: white;
+}
+
+.msg-error{
+    background-color: rgb(202, 0, 0);
+    color: white;
+}
